--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
-    "next": "12.0.4",
+    "next": "12.0.7",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -17,9 +18,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19"
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
