--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.26.1",
     "next": "12.1.0",
