--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formspree/react": "^2.2.4",
-    "@tailwindcss/forms": "^0.5.0",
-    "axios": "^0.26.1",
-    "next": "12.1.0",
-    "next-themes": "^0.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-rough-notation": "^1.0.1",
-    "sharp": "^0.30.5"
+    "@formspree/react": "^2.4.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^1.4.0",
+    "gray-matter": "^4.0.3",
+    "next": "13.4.3",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-rough-notation": "^1.0.3",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.3",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.7"
   }
