--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "@types/node": "^20.2.1",
+    "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "typescript": "^5.0.4"
   }
 }
