--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "@formspree/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^1.4.0",
@@ -18,11 +21,14 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-rough-notation": "^1.0.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
