--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
     "@formspree/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^1.4.0",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "13.4.3",
     "next-themes": "^0.2.1",
@@ -32,7 +32,9 @@
     "autoprefixer": "^10.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.8",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.0.7",
     "typescript": "^5.0.4"
   }
