--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@formspree/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "axios": "^1.4.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "gray-matter": "^4.0.3",
     "next": "13.4.3",
     "next-themes": "^0.2.1",
