--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
+  "endOfLine": "lf",
+  "semi": true,
+  "singleQuote": false,
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true
+  "trailingComma": "es5"
 }
