--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "postcss": "^8.4.8",
     "prettier": "2.8.8",
     "tailwindcss": "^3.0.7",
