update linting rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,39 +37,6 @@
     }
   },
   "rules": {
-    "no-unused-vars": "off",
-    "filenames/match-exported": [
-      2,
-      null,
-      "\\.(jsx?|tsx?)$"
-    ],
-    "prefer-destructuring": [
-      "error",
-      {
-        "VariableDeclarator": {
-          "array": false,
-          "object": true
-        },
-        "AssignmentExpression": {
-          "array": true,
-          "object": true
-        }
-      },
-      {
-        "enforceForRenamedProperties": false
-      }
-    ],
-    "react/require-default-props": [
-      "error",
-      {
-        "forbidDefaultForRequired": true,
-        "classes": "defaultProps",
-        "functions": "defaultProps"
-      }
-    ],
-    "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/consistent-type-definitions": [
       "error",
       "type"
@@ -91,13 +58,29 @@
         ]
       },
       {
-        "selector": "variableLike",
+        "selector": "property",
+        "format": [
+          "camelCase",
+          "UPPER_CASE",
+          "PascalCase",
+          "snake_case"
+        ],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "function",
+        "format": [
+          "camelCase",
+          "PascalCase"
+        ]
+      },
+      {
+        "selector": "variable",
         "format": [
           "camelCase",
           "UPPER_CASE",
           "PascalCase"
-        ],
-        "leadingUnderscore": "allow"
+        ]
       },
       {
         // selector for nextjs pages and component names
@@ -106,13 +89,15 @@
           "PascalCase"
         ],
         "filter": {
-          // selector for nextjs pages and component names
           "regex": "^(?!(?:[A-Z][a-z]+)+$)[A-Z][a-zA-Z]+$",
           "match": true
         }
       }
     ],
-    "@next/next/no-img-element": "off",
+    "react/destructuring-assignment": [
+      "error",
+      "always"
+    ],
     "unused-imports/no-unused-imports": "error",
     "unused-imports/no-unused-vars": [
       "warn",
