--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-unused-imports": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "mdast": "^3.0.0",
     "next": "13.4.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-rough-notation": "^1.0.3",
-    "remark": "^14.0.2",
+    "remark": "^14.0.3",
     "remark-html": "^15.0.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
