--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,63 +37,14 @@
     }
   },
   "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "typescript-eslint/optional-chaining": "off",
+    "@typescript-eslint/no-unnecessary-condition": "off",
     "@typescript-eslint/consistent-type-definitions": [
       "error",
       "type"
     ],
     "@typescript-eslint/no-inferrable-types": "off",
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "default",
-        "format": [
-          "camelCase"
-        ],
-        "leadingUnderscore": "allow"
-      },
-      {
-        "selector": "typeLike",
-        "format": [
-          "PascalCase"
-        ]
-      },
-      {
-        "selector": "property",
-        "format": [
-          "camelCase",
-          "UPPER_CASE",
-          "PascalCase",
-          "snake_case"
-        ],
-        "leadingUnderscore": "allow"
-      },
-      {
-        "selector": "function",
-        "format": [
-          "camelCase",
-          "PascalCase"
-        ]
-      },
-      {
-        "selector": "variable",
-        "format": [
-          "camelCase",
-          "UPPER_CASE",
-          "PascalCase"
-        ]
-      },
-      {
-        // selector for nextjs pages and component names
-        "selector": "variable",
-        "format": [
-          "PascalCase"
-        ],
-        "filter": {
-          "regex": "^(?!(?:[A-Z][a-z]+)+$)[A-Z][a-zA-Z]+$",
-          "match": true
-        }
-      }
-    ],
     "react/destructuring-assignment": [
       "error",
       "always"
