--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "axios": "^1.4.0",
     "classnames": "^2.3.1",
