--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
         "constants/*"
       ],
       "@/types/*": [
-        "@types/*"
+        "types/*"
       ],
       "@/interfaces/*": [
         "interfaces/*"
