--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@formspree/react": "^2.4.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
     "axios": "^1.4.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -35,14 +34,16 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.0",
-    "eslint": "8.47.0",
+    "eslint": "^8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-filenames": "^1.3.2",
     "postcss": "^8.4.31",
     "prettier": "2.8.8",
     "tailwindcss": "^3.0.7",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   }
 }
